# xbox-clips-sync

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/drive/: driver.rs  error.rs  manifest.rs  mod.rs
src/xboxapi/: client.rs  clip.rs  error.rs  mod.rs  xuid.rs
